Claude updated Streaming to Memory Mapped Files